--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Alex Dytrych <alex@dytry.ch>",
   "license": "MIT",
   "dependencies": {
-    "debug": "^2.6.8",
+    "debug": "^3.1.0",
+    "dotenv": "^6.0.0",
     "object-assign": "^4.1.1"
   }
 }
